estilizando Cards e divs padroes, não finalizado

--- a/index.html
+++ b/index.html
@@ -5,20 +5,99 @@
     <title>Homepage</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css"/>
-    <link rel="stylesheet" href="/css/navbar.css"/>
+    <!-- Importar Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/navbar.css" />
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
-<body> 
-    <div id="header"></div>
 
+<body>
+    <div id="header"></div>
 
     <main>
 
+
+        <div class="divisoria1">
+
+            <div class="card">
+                <div class="cardImage">
+                    <img src="images/diablo4img.png" height="130px" width="100%" alt="imagem do jogo">
+                </div>
+                <div class="cardFooter">
+                    <p class="descricao">
+                        <i class="fab fa-playstation fa-1x" style="margin-right: 5px;"></i> <!-- Ícone da PSN -->
+                        Diablo IV Ultimate Edition - Xbox Series X|S
+                    </p>
+                    <p class="apartir">A Partir de :</p>
+                    <p class="valor">R$299,00</p>
+                    <button class="selecionar">COMPRAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="cardImage">
+                    <img src="images/diablo4img.png" height="130px" width="100%" alt="imagem do jogo">
+                </div>
+
+                <div class="cardFooter">
+                    <i class="fab fa-xbox fa-2x"></i>
+                </div>
+
+            </div>
+
+            <div class="card">
+
+                <div class="cardImage">
+                    <img src="images/diablo4img.png" height="130px" width="100%" alt="imagem do jogo">
+                </div>
+
+                <div class="cardFooter">
+                    <i class="fas fa-desktop fa-2x"></i>
+                </div>
+
+            </div>
+
+            <div class="card">
+
+                <div class="cardImage">
+                    <img src="images/diablo4img.png" height="130px" width="100%" alt="imagem do jogo">
+                </div>
+
+                <div class="cardFooter">
+                    <i class="fab fa-steam fa-2x"></i>
+                </div>
+
+            </div>
+
+
+
+
+
+        </div>
+
+        <div class="divisoria2">
+
+
+
+        </div>
+
+
+        <div class="divisoria1">
+
+        </div>
+
+        <div class="divisoria2">
+
+        </div>
+
+
+
+
     </main>
 
-
-   
     <div id="footer"></div>
     <script src="js/modularizar.js"></script>
 </body>
