--- a/public/ofertas.html
+++ b/public/ofertas.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/navbar.css"/>
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Carrinho</title>
 </head>
 <body>
