Css nao finalizado , possivel reestruturação do css aparentemente

--- a/index.html
+++ b/index.html
@@ -27,23 +27,30 @@
                 </div>
                 <div class="cardFooter">
                     <p class="descricao">
-                        <i class="fab fa-playstation fa-1x" style="margin-right: 5px;"></i> <!-- Ícone da PSN -->
+                        <i class="fab fa-xbox fa-1x" style="margin-right: 5px; color: green;"></i> <!-- Ícone da PSN -->
                         Diablo IV Ultimate Edition - Xbox Series X|S
                     </p>
                     <p class="apartir">A Partir de :</p>
+                    <p class="valor">R$199,00</p>
+                    <button  id="btnselecionar">COMPRAR</button>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="cardImage">
+                    <img src="images/gow-ragnarok.jpg" height="130px" width="100%" alt="imagem do jogo">
+                </div>
+
+                <div class="cardFooter">
+                    <p class="descricao"></p>
+                        <i class="fab fa-playstation fa-1x" style="margin-right: 5px; color: blue;"></i> <!-- Ícone da PSN -->
+                        God of War Ragnarök - Digital Deluxe Edition 
+                    </p>
+                    <p class="apartir">A Partir de :</p>
                     <p class="valor">R$299,00</p>
-                    <button class="selecionar">COMPRAR</button>
-                </div>
-            </div>
+                    <button  id="btnselecionar">COMPRAR</button>
 
-            <div class="card">
-
-                <div class="cardImage">
-                    <img src="images/diablo4img.png" height="130px" width="100%" alt="imagem do jogo">
-                </div>
-
-                <div class="cardFooter">
-                    <i class="fab fa-xbox fa-2x"></i>
                 </div>
 
             </div>
@@ -51,11 +58,17 @@
             <div class="card">
 
                 <div class="cardImage">
-                    <img src="images/diablo4img.png" height="130px" width="100%" alt="imagem do jogo">
+                    <img src="images/undertale.jpg" height="130px" width="100%" alt="imagem do jogo">
                 </div>
 
                 <div class="cardFooter">
-                    <i class="fas fa-desktop fa-2x"></i>
+                    <p class="descricao"></p>
+                    <i class="fab fa-steam fa-1x" style="margin-right: 5px; color: rgb(43, 43, 136);"></i>
+                        Undertale - Steam GOLD edition Key 
+                    </p>
+                    <p class="apartir">A Partir de :</p>
+                    <p class="valor">R$23,00</p>
+                    <button  id="btnselecionar">COMPRAR</button>
                 </div>
 
             </div>
@@ -63,11 +76,17 @@
             <div class="card">
 
                 <div class="cardImage">
-                    <img src="images/diablo4img.png" height="130px" width="100%" alt="imagem do jogo">
+                    <img src="images/farcry6.jpg" height="130px" width="100%" alt="imagem do jogo">
                 </div>
 
                 <div class="cardFooter">
-                    <i class="fab fa-steam fa-2x"></i>
+                    <p class="descricao">
+                    <i class="fab fa-steam fa-1x" style="margin-right: 5px; color: rgb(43, 43, 136);"></i>
+                        Far Cry 6 -    Steam Deluxe Edition
+                    </p>
+                    <p class="apartir">A Partir de :</p>
+                    <p class="valor">R$23,00</p>
+                    <button  id="btnselecionar">COMPRAR</button>
                 </div>
 
             </div>
