Alterações e correções no card e swipper, responsividade 0 ainda

--- a/index.html
+++ b/index.html
@@ -1,106 +1,118 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Homepage</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Importar Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/navbar.css" />
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/main.css" />
     <!-- Swiper CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-  </head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+</head>
 
-  <body>
+<body>
     <div id="header"></div>
 
     <main>
-          <!-- divs de conteudo da apgina -->
-      <div class="divisoria1">
-        <!-- Início da estrutura do Swiper -->
-        <div class="swiper">
-          <!-- Adicione o swiper-wrapper ao redor dos slides -->
-          <div class="swiper-wrapper">
-            <!-- Cada slide tem a classe swiper-slide -->
-            <div class="swiper-slide">
-              <div class="card">
-                <div class="cardImage">
-                  <a href="/images/gow-ragnarok.jpg">
-                    <img src="/images/gow-ragnarok.jpg" alt="God of War Ragnarok" />
-                  </a>
+        <!-- divs de conteudo da apgina -->
+        <div class="divisoria1">
+            <!-- Início da estrutura do Swiper -->
+            <div class="swiper">
+                <!-- Adicione o swiper-wrapper ao redor dos slides -->
+                <div class="swiper-wrapper">
+                    <!-- Cada slide tem a classe swiper-slide -->
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <div class="cardImage">
+                                <img src="/images/gow-ragnarokFUL.avif" alt="God of War Ragnarok"
+                                    class="responsive-image" />
+                            </div>
+
+                            <div class="cardFooter">
+                               
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <div class="cardImage">
+
+                                <img src="/images/diablo-4-1024x1024.jpg" alt="God of War Ragnarok"
+                                    class="responsive-image" />
+                            </div>
+                            <div class="cardFooter">
+                                <p>Card 2</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <div class="cardImage">
+
+                                <img src="/images/gta5-1024x1024.avif" alt="God of War Ragnarok"
+                                    class="responsive-image" />
+                            </div>
+                            <div class="cardFooter">
+                                <p>Card 3</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <div class="cardImage">
+
+                                <img src="/images/farcry6.jpg" alt="God of War Ragnarok" class="responsive-image" />
+
+                            </div>
+                            <div class="cardFooter">
+                                <p>God OF war Ragnarok</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <div class="cardImage">
+
+                                <img src="/images/undertale-1024x1024.jpg" alt="God of War Ragnarok"
+                                    class="responsive-image" />
+
+                            </div>
+                            <div class="cardFooter">
+                                <div class="icon">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="cardFooter">
-                  <p>God of War Ragnarok</p>
-                </div>
-              </div>
+
+                <!-- Adiciona a paginação (opcional) -->
+                <div class="swiper-pagination"></div>
+
+                <!-- Botões de navegação (opcional) -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+                <!-- Scrollbar (opcional) -->
+
             </div>
-
-            <div class="swiper-slide">
-              <div class="card">
-                <div class="cardImage">
-                  <a href="/images/card-2.jpg">
-                    <img src="/images/card-2.jpg" alt="Card 2" />
-                  </a>
-                </div>
-                <div class="cardFooter">
-                  <p>Card 2</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="card">
-                <div class="cardImage">
-                  <a href="/images/card-3.jpg">
-                    <img src="/images/card-3.jpg" alt="Card 3" />
-                  </a>
-                </div>
-                <div class="cardFooter">
-                  <p>Card 3</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-                <div class="card">
-                  <div class="cardImage">
-                    <a href="/images/card-3.jpg">
-                      <img src="/images/card-3.jpg" alt="Card 3" />
-                    </a>
-                  </div>
-                  <div class="cardFooter">
-                    <p>Card 3</p>
-                  </div>
-                </div>
-              </div>
-
-          </div>
-
-          <!-- Adiciona a paginação (opcional) -->
-          <div class="swiper-pagination"></div>
-
-          <!-- Botões de navegação (opcional) -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-          <!-- Scrollbar (opcional) -->
-          <div class="swiper-scrollbar"></div>
+            <!-- Fim da estrutura do Swiper -->
         </div>
-        <!-- Fim da estrutura do Swiper -->
-      </div>
 
-      <div class="divisoria2"></div>
-      <div class="divisoria1"></div>
-      <div class="divisoria2"></div>
+        <div class="divisoria2"></div>
+        <div class="divisoria1"></div>
+        <div class="divisoria2"></div>
     </main>
 
     <div id="footer"></div>
@@ -111,34 +123,51 @@
 
     <!-- Inicialização do SwiperJS -->
     <script>
-      document.addEventListener('DOMContentLoaded', function () {
-        var swiper = new Swiper('.swiper', {
-            slidesPerView: 3,
-          // Configurações opcionais
-          direction: 'horizontal',
-          loop: false,
+        document.addEventListener('DOMContentLoaded', function () {
+            var swiper = new Swiper('.swiper', {
+                // Ajuste o espaço entre os slides conforme necessário
+                // Configurações opcionais
+                direction: 'horizontal',
+                loop: true,
 
-          
 
-          // Paginação
-          pagination: {
-            el: '.swiper-pagination',
-            clickable: true,
-            slidesPerView : 3
-          },
 
-          // Botões de navegação
-          navigation: {
-            nextEl: '.swiper-button-next',
-            prevEl: '.swiper-button-prev',
-          },
+                // Paginação
+                pagination: {
+                    el: '.swiper-pagination',
+                    clickable: true,
+                    slidesPerView: 3
+                },
 
-          // Scrollbar
-          scrollbar: {
-            el: '.swiper-scrollbar',
-          },
+                // Botões de navegação
+                navigation: {
+                    nextEl: '.swiper-button-next',
+                    prevEl: '.swiper-button-prev',
+                },
+
+                // Scrollbar
+                scrollbar: {
+                    el: '.swiper-scrollbar',
+                },
+
+                breakpoints: {
+                    640: {
+                        slidesPerView: 1,
+                        spaceBetween: 10,
+                    },
+                    768: {
+                        slidesPerView: 2,
+                        spaceBetween: 20,
+                    },
+                    1024: {
+                        slidesPerView: 3,
+                        spaceBetween: 30,
+                    },
+                }
+
+            });
         });
-      });
     </script>
-  </body>
+</body>
+
 </html>
