Alterações css , e sql do BD nao tem relacao com o site

--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
                             <div class="cardImage">
                                 <img src="/images/gow-ragnarokFUL.avif" alt="God of War Ragnarok"
                                     class="responsive-image" />
+                                
                             </div>
 
+
+                            <!-- <i class="fa-brands fa-playstation fa-2x" style="color: blue;"></i>
+<i class="fa-brands fa-xbox fa-2x" style="color: green;"></i>
+<i class="fa-brands fa-steam fa-2x" style="color: darkblue;"></i> -->
+
                             <div class="cardFooter">
-                               
+                                <i class="fa-brands fa-playstation fa-2x"></i>
+                                <i class="fa-brands fa-playstation fa-2x" style="color: blue;"></i>
+                               <p>Lorem ipsum dolor sit amet consectetur adipisicing el</p>
                             </div>
                         </div>
                     </div>
@@ -128,7 +136,7 @@
                 // Ajuste o espaço entre os slides conforme necessário
                 // Configurações opcionais
                 direction: 'horizontal',
-                loop: true,
+                loop: false,
 
 
 
@@ -160,6 +168,16 @@
                         spaceBetween: 20,
                     },
                     1024: {
+                        slidesPerView: 3,
+                        spaceBetween: 30,
+                    },
+
+                    1024: {
+                        slidesPerView: 3,
+                        spaceBetween: 30,
+                    },
+
+                    1080: {
                         slidesPerView: 3,
                         spaceBetween: 30,
                     },
