Carrinho de compras começo da implementação

--- a/index.html
+++ b/index.html
@@ -19,13 +19,23 @@
 <body>
     <div id="header"></div>
 
-    <main>
-
-        <div class="containerCarrinho">
+    <div id="carrinhoDireita">
+        <div id="containerCarrinho">
             <div class="cartHead">
                 <h1>Seu carrinho de compras</h1>
             </div>
             <div class="cartItens">
+                <div class="item">
+                    <div class="imgItem"><img src="/images/watchdogs2.jpg" alt="" srcset=""></div>
+                    <div class="textoItem"></div>
+                    <div class="removerItem"><i class="fa-solid fa-trash"></i></div>
+                </div>
+ 
+                <div class="item">
+                    <div class="imgItem"><img src="/images/watchdogs2.jpg" alt="" srcset=""></div>
+                    <div class="textoItem"></div>
+                    <div class="removerItem"><i class="fa-solid fa-trash"></i></div>
+                </div>
                 <div class="item">
                     <div class="imgItem"><img src="/images/watchdogs2.jpg" alt="" srcset=""></div>
                     <div class="textoItem"></div>
@@ -37,6 +47,10 @@
                 <h3>Total 50,00</h3>
             </div>
         </div>
+    </div>
+
+
+    <main>
 
         <div class="container">
             <!--CARD JOGO 1-->
