Estrutura inicial da lista do carrinho começada

--- a/index.html
+++ b/index.html
@@ -21,31 +21,15 @@
 
     <div id="carrinhoDireita">
         <div id="containerCarrinho">
-            <div class="cartHead">
-                <h1>Seu carrinho de compras</h1>
-            </div>
-            <div class="cartItens">
-                <div class="item">
-                    <div class="imgItem"><img src="/images/watchdogs2.jpg" alt="" srcset=""></div>
-                    <div class="textoItem"></div>
-                    <div class="removerItem"><i class="fa-solid fa-trash"></i></div>
-                </div>
- 
-                <div class="item">
-                    <div class="imgItem"><img src="/images/watchdogs2.jpg" alt="" srcset=""></div>
-                    <div class="textoItem"></div>
-                    <div class="removerItem"><i class="fa-solid fa-trash"></i></div>
-                </div>
-                <div class="item">
-                    <div class="imgItem"><img src="/images/watchdogs2.jpg" alt="" srcset=""></div>
-                    <div class="textoItem"></div>
-                    <div class="removerItem"><i class="fa-solid fa-trash"></i></div>
-                </div>
+            <div class="carrinhoHeader" style="background-color: blue;"></div>
 
+            <div class="item">
+                <div class="i"><img src="/images/diablo-4-1024x1024.jpg" alt="" srcset=""></div>
+                <div class="i" style="background-color: red;">Diablo IV steam edition</div>
+                <div class="i" style="background-color: blue;"> <i class="fa-brands fa-steam"></i></div>
             </div>
-            <div class="CartFooter">
-                <h3>Total 50,00</h3>
-            </div>
+
+            <div class="carrinhoFooter" style="background-color: brown;"></div>
         </div>
     </div>
 
