--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
     <div id="carrinhoDireita">
         <div id="containerCarrinho">
-            <div class="carrinhoHeader" style="background-color: blue;"></div>
+            <div class="carrinhoHeader" style="background-color: blue;">
+                <!-- Botão para limpar o carrinho -->
+<button onclick="clearCart()">Limpar Carrinho</button>
+            </div>
 
             <div class="item">
                 <div class="i"><img src="/images/diablo-4-1024x1024.jpg" alt="" srcset=""></div>
@@ -36,314 +39,7 @@
 
     <main>
 
-        <div class="container">
-            <!--CARD JOGO 1-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/diablo-4-1024x1024.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-                    <i class="fa-brands fa-steam"></i>
-                    <div class="nomeJogo">
-                        <p>Diablo® IV: Vessel of Hatred™</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-            <!--CARD JOGO 2-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/undertale-1024x1024.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-                    <i class="fa-brands fa-xbox"></i>
-                    <div class="nomeJogo">
-                        <p>Undertale Xbox</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-            <!--CARD JOGO 3-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/watchdogs2.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-                    <i class="fa-brands fa-playstation"></i>
-                    <div class="nomeJogo">
-                        <p>Dino T-Rex 3</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-            <!--CARD JOGO 4-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/farcry6.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-
-                    <i class="fa-brands fa-xbox"></i>
-                    <div class="nomeJogo">
-                        <p>Dino T-Rex 4</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-
-            <!--CARD JOGO 4-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/farcry6.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-
-                    <i class="fa-brands fa-xbox"></i>
-                    <div class="nomeJogo">
-                        <p>Dino T-Rex 4</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-
-
-
-        </div>
-
-
-
-
-        <div class="container2">
-            <!--CARD JOGO 1-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/diablo-4-1024x1024.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-                    <i class="fa-brands fa-steam"></i>
-                    <div class="nomeJogo">
-                        <p>Diablo IV Gold Edition</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-            <!--CARD JOGO 2-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/undertale-1024x1024.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-                    <i class="fa-brands fa-xbox"></i>
-                    <div class="nomeJogo">
-                        <p>Dino T-Rex 2</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-            <!--CARD JOGO 3-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/watchdogs2.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-                    <i class="fa-brands fa-playstation"></i>
-                    <div class="nomeJogo">
-                        <p>Dino T-Rex 3</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-            <!--CARD JOGO 4-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/farcry6.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-
-                    <i class="fa-brands fa-xbox"></i>
-                    <div class="nomeJogo">
-                        <p>Dino T-Rex 4</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-
-            <!--CARD JOGO 5-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/farcry6.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-
-                    <i class="fa-brands fa-xbox"></i>
-                    <div class="nomeJogo">
-                        <p>Dino T-Rex 4</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-
-
-
-        </div>
-
-
-
-
-
-        <div class="container">
-            <!--CARD JOGO 1-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/diablo-4-1024x1024.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-                    <i class="fa-brands fa-steam"></i>
-                    <div class="nomeJogo">
-                        <p>Diablo® IV: Vessel of Hatred™</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-            <!--CARD JOGO 2-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/undertale-1024x1024.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-                    <i class="fa-brands fa-xbox"></i>
-                    <div class="nomeJogo">
-                        <p>Undertale Xbox</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-            <!--CARD JOGO 3-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/watchdogs2.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-                    <i class="fa-brands fa-playstation"></i>
-                    <div class="nomeJogo">
-                        <p>Dino T-Rex 3</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-            <!--CARD JOGO 4-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/farcry6.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-
-                    <i class="fa-brands fa-xbox"></i>
-                    <div class="nomeJogo">
-                        <p>Dino T-Rex 4</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-
-            <!--CARD JOGO 4-->
-            <div class="card">
-                <div class="imgJogo">
-                    <img class="img" src="/images/farcry6.jpg" alt="sua descrição aqui">
-                </div>
-                <div class="infoJogo">
-
-                    <i class="fa-brands fa-xbox"></i>
-                    <div class="nomeJogo">
-                        <p>Dino T-Rex 4</p>
-                    </div>
-
-                </div>
-                <div class="precoJogo">
-                    <p>de <span class="precoAntigo"> R$ 300,00 </span> por R$ 234,99</p>
-                </div>
-                <button class="btnComprar"><i class="fas fa-shopping-cart"></i>Comprar</button>
-            </div>
-
-
-
-
-        </div>
-
-
-    </main>
-
-
+        
     </main>
 
     <div id="footer"></div>
@@ -351,6 +47,7 @@
     <!-- Scripts -->
     <script src="js/modularizar.js"></script>
     <script src="js/carrinho.js"></script>
+    <script src="js/jogos.js"></script>
 </body>
 
 </html>
