Carrinho posicionado , funcao para criar item dinamicamente no carrinho ta paia dms, recuperar dados via localstorage e iterar

--- a/public/xbox.html
+++ b/public/xbox.html
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css"/>
-    <link rel="stylesheet" href="/css/navbar.css"/>
-    <link rel="stylesheet" href="/css/footer.css">
-    <title>Contato</title>
+    <title>Homepage</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Importar Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/navbar.css"/>
+    <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="stylesheet" href="../css/carrinho.css"/>
+
 </head>
+
 <body>
     <div id="header"></div>
 
+    <div id="carrinhoDireita" class="carrinho">
+        <div id="containerCarrinho">
+            <div class="carrinhoHeader" style="background-color: blue;">
+                <!-- Botão para limpar o carrinho -->
+<!-- <button onclick="clearCart()">Limpar Carrinho</button> -->
+            </div>
 
-    <main>
+            <div class="item">
+                <div class="i"><img src="/images/diablo-4-1024x1024.jpg" alt="" srcset=""></div>
+                <div class="i" style="background-color: red;">Diablo IV steam edition</div>
+                <div class="i" style="background-color: blue;"> <i class="fa-brands fa-steam"></i></div>
+            </div>
 
-    </main>
+            <div class="carrinhoFooter" style="background-color: brown;"></div>
+        </div>
+    </div>
 
 
-   
+    <main></main>
+
     <div id="footer"></div>
-    <script src="/js/modularizar.js"></script>    
+
+    <!-- Scripts -->
+    <script src="../js/modularizar.js"></script>
+    <script src="../js/carrinho.js"></script>
+    <script src="../js/jogos.js"></script>
 </body>
+
 </html>
