carrinho adicionar , remover item e limparcarrinho, e agrupar itens por categoria nas paginas de jogos

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
 </head>
 
-<body>
+<body id="inicio">
     <div id="header"></div>
+
+
     <div id="carrinhoDireita" class="carrinho">
         <div id="containerCarrinho">
             <div class="carrinhoHeader" style="background-color: blue;">
@@ -24,6 +26,7 @@
 <!-- <button onclick="clearCart()">Limpar Carrinho</button> -->
 
                 <p>Carrinho de Compras</p>
+                <i class="fa-solid fa-trash-can" id="clearCart"></i>
             </div>
 
             <div class="containeritens">
@@ -53,6 +56,7 @@
     <script src="js/modularizar.js"></script>
     <script src="js/carrinho.js"></script>
     <script src="js/jogos.js"></script>
+
 </body>
 
 </html>
