--- a/public/ofertas.html
+++ b/public/ofertas.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css"/>
-    <link rel="stylesheet" href="/css/navbar.css"/>
-    <link rel="stylesheet" href="/css/footer.css"/>
-    <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/navbar.css"/>
+    <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="stylesheet" href="../css/carrinho.css"/>
     <title>Carrinho</title>
 </head>
-<body>
+<body id="ofertas">
     <div id="header"></div>
 
 
@@ -20,7 +22,11 @@
 
    
     <div id="footer"></div>
-    <script src="/js/modularizar.js"></script>
-    
+     <!-- Scripts -->
+     <script src="../js/modularizar.js"></script>
+     <script src="../s/carrinho.js"></script>
+     <script src="../js/jogos.js"></script>
+     <script src="../js/main.js"></script>
+
 </body>
 </html>
