--- a/public/sobre-nos.html
+++ b/public/sobre-nos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/footer.css">
     <title>Document</title>
 </head>
-<body>
+<body id="sobre-nos">
     <div id="header"></div>
 
 
