Testes e revisões finalizados no JS, Responsabilidade basica implementada , Documentação do codigo JS completada.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="aviso">
                     <h3>Ofertas imbátiveis</h3>
-                    <p>Aproveite o Vaporwave da economia com nossas ofertas e descontos atualizados regularmente em títulos populares.</p>
+                    <p>Aproveite o Vaporwave da economia com nossas ofertas e descontos atualizados praticamente nunca em títulos populares.</p>
                 </div>
             </section>
 
@@ -55,9 +55,11 @@
 
             <section class="sobre">
                 <h2>Por que escolher a GX - Gaming?</h2>
-                <p>GX-gaming não é apenas uma loja; é um portal para o passado e o futuro dos jogos. Selecionamos as melhores ofertas em chaves Steam, Xbox e PSN, envolvendo-as em uma estética Vaporwave que celebra a nostalgia dos jogos enquanto
+                <p>GX-gaming não é apenas uma loja, é um portal para o passado e o futuro dos jogos. Selecionamos as melhores ofertas em chaves Steam, Xbox e PSN, envolvendo-as em uma estética Vaporwave que celebra a nostalgia dos jogos enquanto
                     abraçando o futuro digital. Nossa missão é tornar a aquisição de jogos tão emocionante quanto jogar os próprios jogos.</p>
-                    <button class="botaoFake">GITHUB- ErickGX</button>
+                    <a href="https://github.com/ErickGX">
+                    <button class="botaoFake">GITHUB - ErickGX</button>
+                    </a>
             </section>
         </main>
 
